# Copyright (c) 2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

static_library("browser") {
  sources = [
    "local_storage_manager_fake_impl.cc",
    "local_storage_manager_fake_impl.h",
    "local_storage_manager_impl.cc",
    "local_storage_manager_impl.h",
    "local_storage_manager_mojo_impl.cc",
    "local_storage_manager_mojo_impl.h",
    "local_storage_manager_url_request_handler.cc",
    "local_storage_manager_url_request_handler.h",
  ]

  deps = [
    "//base",
    "//components/local_storage_manager/common",
    "//components/local_storage_manager/public",
    "//content/public/common",
    "//url",
  ]

  public_deps = [
    "//components/local_storage_manager/public/mojom",
  ]
}
