static_library("common") {
  sources = [
    "local_storage_manager_database.cc",
    "local_storage_manager_database.h",
    "local_storage_manager_store.cc",
    "local_storage_manager_store.h",
    "local_storage_manager_types.h",
  ]

  deps = [
    "//base",
    "//content/public/common",
    "//ipc",
    "//sql",
    "//url",
  ]
}
