# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//extensions/shell/neva_extensions.gni")

source_set("neva_app_shell_lib") {
  deps = [
    "//apps",
    "//components/keep_alive_registry",
    "//components/user_prefs",
    "//extensions/browser:core_api_provider",
    "//extensions/common:core_api_provider",
    "//extensions/renderer",
    "//extensions/shell/browser/system_logs",
    "//extensions/shell/common/api",
    "//extensions/shell/common/api:extensions_features",
    "//skia",
    "//v8",
  ]

  sources = webview_sources_abs
  if (is_desktop_linux) {
    sources += [
      "//extensions/shell/browser/api/file_system/shell_file_system_delegate.cc",
      "//extensions/shell/browser/api/file_system/shell_file_system_delegate.h",
    ]
  }
}

