# Copyright 2017-2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

neva = {
  configs = []
  public_configs = []
  deps = [
    "//media/neva:media_platform_api",
    "//media/neva:media_player_neva",
    "//ui/platform_window:mojom"
  ]
  public_deps = [
    "//base",
    "//third_party/jsoncpp",
  ]
  _dir = get_path_info("../neva", "abspath")
  sources = [
    "$_dir/media_info_loader.cc",
    "$_dir/media_info_loader.h",
    "$_dir/stream_texture_interface.h",
    "$_dir/video_frame_provider_impl.cc",
    "$_dir/video_frame_provider_impl.h",
    "$_dir/video_util_neva.cc",
    "$_dir/video_util_neva.h",
    "$_dir/webmediaplayer_mse.cc",
    "$_dir/webmediaplayer_mse.h",
    "$_dir/webmediaplayer_neva.cc",
    "$_dir/webmediaplayer_neva.h",
    "$_dir/webmediaplayer_neva_factory.h",
    "$_dir/webmediaplayer_neva_factory.cc",
    "$_dir/webmediaplayer_params_neva.cc",
    "$_dir/webmediaplayer_params_neva.h",
  ]
  if (use_neva_webrtc) {
    sources += [
      "$_dir/webmediaplayer_webrtc.cc",
      "$_dir/webmediaplayer_webrtc.h",
    ]
  }
}
