# Copyright 2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

neva_webrtc = {
  configs = []
  public_configs = []
  deps = [ "//skia" ]
  public_deps = [ "//base" ]
  _dir = get_path_info("../neva", "abspath")
  sources = [
    "$_dir/neva_webrtc_video_decoder_factory.cc",
    "$_dir/neva_webrtc_video_decoder_factory.h",
    "$_dir/neva_webrtc_video_encoder_factory.cc",
    "$_dir/neva_webrtc_video_encoder_factory.h",
    "$_dir/webrtc_pass_through_video_decoder.cc",
    "$_dir/webrtc_pass_through_video_decoder.h",
    "$_dir/webrtc_pass_through_video_encoder.cc",
    "$_dir/webrtc_pass_through_video_encoder.h",
    "$_dir/webrtc_video_encoder.cc",
    "$_dir/webrtc_video_encoder.h",
  ]

  if (is_webos) {
    import ("//media/webrtc/neva/webos/build.gni")
    configs += webos.configs
    public_configs += webos.public_configs
    deps += webos.deps
    public_deps += webos.public_deps
    sources += webos.sources
  }
}
