# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//webos/install/cbe.gni")
import("//webos/install/paths.gni")
import("//webos/install/sysbus.gni")

install_manifest("app_shell_manifest") {
  sources = [ "app-shell.manifest.json" ]
}

install_cbe_data("app_shell_cbe") {
  testonly = true

  sources = [ "$root_out_dir/extensions_shell_and_test.pak" ]
  deps = [ "//extensions:shell_and_test_pak" ]
}

install_legacy_services("app_shell_services") {
  app = "$app_shell_app"
  exename = "$app_shell_exe"
}

install_containers("app_shell_container") {
  sources = [ "//webos/install/services/app.container.json.in" ]
  exename = "$app_shell_exe"
  app = "$app_shell_app"
}

install_legacy_roles("app_shell_roles") {
  sources = [ "app-shell.role.json.in" ]
  exename = "$app_shell_exe"
  app = "$app_shell_app"
}

install_scripts("app_shell_scripts") {
  sources = [ "run_app_shell" ]
  outputs = [ "$image_path/$app_shell_dir/run_app_shell" ]
}

copy("app_shell") {
  testonly = true

  sources = [ "$root_out_dir/app_shell",
              "$root_out_dir/snapshot_blob.bin",
            ]

  outputs = [ "$image_path/$app_shell_dir/{{source_file_part}}" ]

  deps = [
    "//extensions/shell:app_shell",
    "//v8:v8", # for snapshot_blob.bin
    ":app_shell_scripts",
    ":app_shell_cbe",
    ":app_shell_manifest",
    ":app_shell_roles",
    ":app_shell_services",
    ":app_shell_container",
  ]
}
