# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//build/config/locales.gni")
import("//webos/install/cbe.gni")
import("//webos/install/paths.gni")
import("//webos/install/sysbus.gni")

install_manifest("browser_manifest") {
  sources = [ "com.webos.app.browser.manifest.json" ]
}

install_legacy_roles("browser_roles") {
  app = "$browser_app"
  exename = "$browser_exe"
  sources = [ "//webos/install/services/role.json.in" ]
}

install_legacy_services("browser_services") {
  app = "$browser_app"
  exename = "$browser_exe"
}

install_scripts("browser_scripts") {
  sources = [ "run_webbrowser",
              "kill_webbrowser",
              "mem_webbrowser" ]
  outputs = [ "$image_path/$browser_dir/" ]
}


copy("default_browser") {
  sources = [ "$root_out_dir/chrome",
              "$root_out_dir/chrome_100_percent.pak",
              "$root_out_dir/chrome_200_percent.pak",
              "$root_out_dir/headless_lib.pak",
              "$root_out_dir/resources.pak",
              "$root_out_dir/icudtl.dat",
              "$root_out_dir/snapshot_blob.bin",
              "$root_out_dir/product_logo_48.png",
              "appinfo.json",
              "webbrowser_icon.png",
              "webbrowser_splash.png" ]

  outputs = [ "$image_path/$browser_dir/{{source_file_part}}" ]

  deps = [
    "//chrome",                             # for chrome, chrome_*.pack and resources.pak
    "//v8:v8",                              # for snapshot_blob.bin and natives_blob.bin
    "//third_party/icu:icudata",            # for icudtl.dat
    "//headless:pak",                       # for headless_lib.pak
    ":browser_scripts",
    ":browser_manifest",
    ":browser_roles",
    ":browser_services",
    ":locales"
  ]
}

copy("locales") {
  sources = []
  foreach(locale, locales) {
    sources += [ "$root_out_dir/locales/$locale.pak" ]
  }

  outputs = [ "$image_path/$browser_dir/locales/{{source_file_part}}" ]
  deps = [ "//chrome:packed_resources" ]
}
