# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//webos/install/paths.gni")
import("//webos/install/sysbus.gni")

copy("wam_demo_cursor") {
  sources = [ "$root_out_dir/cursor.png" ]
  outputs = [ "$image_path/$wam_demo_dir/cursor.png" ]

  deps = [
    "//neva/wam_demo:cursor"
  ]
}

install_containers("wam_demo_container") {
  sources = [ "//webos/install/services/app.container.json.in" ]
  exename = "$wam_demo_exe"
  app = "$wam_demo_app"
}

install_manifest("wam_demo_manifest") {
  sources = [
    "com.webos.app.wam-demo.manifest.json",
    "com.webos.app.neva.wam.demo.manual.manifest.json",
  ]
}

install_legacy_roles("wam_demo_roles") {
  app = "$wam_demo_app"
  exename = "$wam_demo_exe"
  sources = [ "//webos/install/services/role.json.in" ]
}

install_legacy_services("wam_demo_services") {
  app = "$wam_demo_app"
  exename = "$wam_demo_exe"
}

install_client_permissions("wam_demo_manual_perm") {
  sources = [ "com.webos.app.neva.wam.demo.manual.perm.json" ]
}

install_roles("wam_demo_manual_role") {
  sources = [ "com.webos.app.neva.wam.demo.manual.role.json" ]
}

install_scripts("wam_demo_scripts") {
  sources = [ "run_wam_demo" ]
  outputs = [ "$image_path/$wam_demo_dir/run_wam_demo" ]
}

copy("wam_demo") {
  testonly = true

  sources = [ "$root_out_dir/wam_demo" ]
  outputs = [ "$image_path/$wam_demo_dir/{{source_file_part}}" ]

  deps = [
    "//neva/wam_demo:wam_demo",
    ":wam_demo_scripts",
    ":wam_demo_manual_perm",
    ":wam_demo_manual_role",
    ":wam_demo_container",
    ":wam_demo_cursor",
    ":wam_demo_manifest",
    ":wam_demo_roles",
    ":wam_demo_services"
  ]
}
