# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/app_runtime/app_runtime_locales.gni")
import("//neva/neva.gni")
import("//webos/install/paths.gni")
import("//webos/install/sysbus.gni")
import("headers.gni")

copy("weboswebruntime") {
  testonly = true
  sources = [
    "$root_out_dir/app_runtime_content.pak",
    "$root_out_dir/icudtl.dat",
    "$root_out_dir/snapshot_blob.bin",
    "$root_out_dir/webos_content.pak"
  ]

  outputs = [ "$image_path/$cbe_data_dir/{{source_file_part}}" ]

  deps = [
    "//neva/app_runtime:app_runtime_resources", # for app_runtime_content.pak
    "//third_party/icu:icudata",                # for icudtl.dat
    "//v8:v8",                                  # for snapshot_blob.bin
    "//webos:webos_resources",                  # for webos_content.pak
    ":locales",
    ":headers",
    ":generated_headers"
  ]
  if (use_cbe) {
    deps += [ ":cbe" ]                          # for libcbe.so
  }
  if (use_lttng) {
    deps += [ ":lttng_provider" ]               # for libchromium_lttng_provider.so
  }
}

if (use_lttng) {
  copy("lttng_provider") {
    testonly = true
    sources = [
      "$root_out_dir/liblttng_provider.so"
    ]
    outputs = [ "$image_path/$libdir/{{source_file_part}}" ]

    deps = [
      "//base/trace_event/neva/lttng:lttng_provider"
    ]
  }
}

if (use_cbe) {
  copy("cbe") {
    testonly = true
    sources = [
      "$root_out_dir/libcbe.so",
    ]
    outputs = [ "$image_path/$libdir/{{source_file_part}}" ]

    deps = [
      "//neva/cbe:chromium_cbe"
    ]
  }
}

copy("locales") {
  sources = [
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_am.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ar.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_bg.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_bn.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ca.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_cs.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_da.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_de.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_el.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_en-GB.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_en-US.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_es-419.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_es.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_et.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_fa.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_fake-bidi.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_fi.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_fil.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_fr.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_gu.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_he.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_hi.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_hr.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_hu.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_id.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_it.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ja.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_kn.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ko.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_lt.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_lv.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ml.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_mr.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ms.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_nb.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_nl.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_pl.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_pt-BR.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_pt-PT.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ro.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ru.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_sk.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_sl.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_sr.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_sv.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_sw.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_ta.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_te.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_th.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_tr.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_uk.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_vi.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_zh-CN.pak",
    "$root_gen_dir/third_party/blink/public/strings/blink_strings_zh-TW.pak",
  ]

  foreach(locale, app_runtime_locales) {
    sources += [ "$root_gen_dir/webos/repack/$locale.pak" ]
  }


  outputs = [ "$image_path/$cbe_data_locales_dir/{{source_file_part}}" ]
  deps = [
    "//third_party/blink/public/strings",
    "//webos:resources",
  ]
}

copy("headers") {
  sources = headers

  outputs = [ "$image_path/$includedir/webruntime/{{source_root_relative_dir}}/{{source_file_part}}" ]
}

copy("generated_headers") {
  sources = generated_headers
  outputs = []

  foreach(file, rebase_path(sources, root_gen_dir)) {
    outputs += [ "$image_path/$includedir/webruntime/" + file ]
  }
  deps = generated_headers_deps
}
