# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

headers = [
  "//base/at_exit.h",
  "//base/atomic_ref_count.h",
  "//base/atomicops.h",
  "//base/atomicops_internals_portable.h",
  "//base/base_export.h",
  "//base/bind.h",
  "//base/bind_helpers.h",
  "//base/bind_internal.h",
  "//base/callback.h",
  "//base/callback_forward.h",
  "//base/callback_internal.h",
  "//base/check.h",
  "//base/check_op.h",
  "//base/compiler_specific.h",
  "//base/containers/circular_deque.h",
  "//base/containers/stack.h",
  "//base/containers/util.h",
  "//base/containers/vector_buffer.h",
  "//base/dcheck_is_on.h",
  "//base/debug/alias.h",
  "//base/debug/debugger.h",
  "//base/gtest_prod_util.h",
  "//base/immediate_crash.h",
  "//base/lazy_instance_helpers.h",
  "//base/location.h",
  "//base/logging.h",
  "//base/macros.h",
  "//base/memory/aligned_memory.h",
  "//base/memory/raw_scoped_refptr_mismatch_checker.h",
  "//base/memory/ref_counted.h",
  "//base/memory/scoped_refptr.h",
  "//base/memory/singleton.h",
  "//base/memory/weak_ptr.h",
  "//base/message_loop/message_pump.h",
  "//base/message_loop/message_pump_libevent.h",
  "//base/message_loop/timer_slack.h",
  "//base/numerics/checked_math.h",
  "//base/numerics/checked_math_impl.h",
  "//base/numerics/clamped_math.h",
  "//base/numerics/clamped_math_impl.h",
  "//base/numerics/safe_conversions.h",
  "//base/numerics/safe_conversions_arm_impl.h",
  "//base/numerics/safe_conversions_impl.h",
  "//base/numerics/safe_math.h",
  "//base/numerics/safe_math_arm_impl.h",
  "//base/numerics/safe_math_clang_gcc_impl.h",
  "//base/numerics/safe_math_shared_impl.h",
  "//base/notreached.h",
  "//base/observer_list.h",
  "//base/optional.h",
  "//base/pending_task.h",
  "//base/scoped_clear_last_error.h",
  "//base/scoped_observer.h",
  "//base/sequence_checker.h",
  "//base/sequence_checker_impl.h",
  "//base/sequenced_task_runner.h",
  "//base/sequenced_task_runner_helpers.h",
  "//base/single_thread_task_runner.h",
  "//base/stl_util.h",
  "//base/strings/string16.h",
  "//base/strings/string_number_conversions.h",
  "//base/strings/string_piece.h",
  "//base/strings/string_piece_forward.h",
  "//base/synchronization/condition_variable.h",
  "//base/synchronization/lock.h",
  "//base/synchronization/lock_impl.h",
  "//base/synchronization/waitable_event.h",
  "//base/task_runner.h",
  "//base/template_util.h",
  "//base/thread_annotations.h",
  "//base/threading/platform_thread.h",
  "//base/threading/thread.h",
  "//base/threading/thread_checker.h",
  "//base/threading/thread_checker_impl.h",
  "//base/threading/thread_collision_warner.h",
  "//base/threading/thread_restrictions.h",
  "//base/time/time.h",
  "//base/tuple.h",
  "//build/build_config.h",
  "//build/buildflag.h",
  "//media/cdm/api/content_decryption_module.h",
  "//neva/app_runtime/public/app_runtime_constants.h",
  "//neva/app_runtime/public/app_runtime_event.h",
  "//neva/app_runtime/public/app_runtime_export.h",
  "//neva/app_runtime/public/webapp_window_delegate.h",
  "//neva/app_runtime/public/webview_base_internals.h",
  "//neva/app_runtime/public/webview_controller_delegate.h",
  "//neva/app_runtime/public/webview_delegate.h",
  "//neva/app_runtime/webapp_window.h",
  "//ozone/platform/ozone_export_wayland.h",
  "//ozone/platform/webos_constants.h",
  "//skia/config/SkUserConfig.h",
  "//skia/config/sk_ref_cnt_ext_release.h",
  "//skia/ext/platform_canvas.h",
  "//skia/ext/skia_histogram.h",
  "//testing/gtest/include/gtest/gtest.h",
  "//testing/gtest/include/gtest/gtest_prod.h",
  "//third_party/googletest/src/googletest/include/gtest/gtest_prod.h",
  "//third_party/skia/include/core/SkBitmap.h",
  "//third_party/skia/include/core/SkBlurTypes.h",
  "//third_party/skia/include/core/SkCanvas.h",
  "//third_party/skia/include/core/SkColor.h",
  "//third_party/skia/include/core/SkColorPriv.h",
  "//third_party/skia/include/core/SkColorSpace.h",
  "//third_party/skia/include/core/SkData.h",
  "//third_party/skia/include/core/SkDrawLooper.h",
  "//third_party/skia/include/core/SkFilterQuality.h",
  "//third_party/skia/include/core/SkFlattenable.h",
  "//third_party/skia/include/core/SkImage.h",
  "//third_party/skia/include/core/SkImageEncoder.h",
  "//third_party/skia/include/core/SkImageFilter.h",
  "//third_party/skia/include/core/SkImageInfo.h",
  "//third_party/skia/include/core/SkMath.h",
  "//third_party/skia/include/core/SkMatrix.h",
  "//third_party/skia/include/core/SkMatrix44.h",
  "//third_party/skia/include/core/SkPaint.h",
  "//third_party/skia/include/core/SkPath.h",
  "//third_party/skia/include/core/SkPathEffect.h",
  "//third_party/skia/include/core/SkPicture.h",
  "//third_party/skia/include/core/SkPixelRef.h",
  "//third_party/skia/include/core/SkPixmap.h",
  "//third_party/skia/include/core/SkPoint.h",
  "//third_party/skia/include/core/SkRRect.h",
  "//third_party/skia/include/core/SkRect.h",
  "//third_party/skia/include/core/SkRefCnt.h",
  "//third_party/skia/include/core/SkRegion.h",
  "//third_party/skia/include/core/SkScalar.h",
  "//third_party/skia/include/core/SkShader.h",
  "//third_party/skia/include/core/SkSize.h",
  "//third_party/skia/include/core/SkString.h",
  "//third_party/skia/include/core/SkStrokeRec.h",
  "//third_party/skia/include/core/SkSurface.h",
  "//third_party/skia/include/core/SkSurfaceProps.h",
  "//third_party/skia/include/core/SkTypeface.h",
  "//third_party/skia/include/core/SkTypes.h",
  "//third_party/skia/include/core/SkUnPreMultiply.h",
  "//third_party/skia/include/gpu/GrConfig.h",
  "//third_party/skia/include/gpu/GrContext.h",
  "//third_party/skia/include/gpu/GrTypes.h",
  "//third_party/skia/include/gpu/gl/GrGLConfig.h",
  "//third_party/skia/include/gpu/gl/GrGLConfig_chrome.h",
  "//third_party/skia/include/gpu/gl/GrGLTypes.h",
  "//third_party/skia/include/private/GrSingleOwner.h",
  "//third_party/skia/include/private/SkChecksum.h",
  "//third_party/skia/include/private/SkDeque.h",
  "//third_party/skia/include/private/SkFixed.h",
  "//third_party/skia/include/private/SkFloatBits.h",
  "//third_party/skia/include/private/SkFloatingPoint.h",
  "//third_party/skia/include/private/SkMutex.h",
  "//third_party/skia/include/private/SkOnce.h",
  "//third_party/skia/include/private/SkSemaphore.h",
  "//third_party/skia/include/private/SkSpinlock.h",
  "//third_party/skia/include/private/SkTArray.h",
  "//third_party/skia/include/private/SkTDArray.h",
  "//third_party/skia/include/private/SkTFitsIn.h",
  "//third_party/skia/include/private/SkTHash.h",
  "//third_party/skia/include/private/SkTLogic.h",
  "//third_party/skia/include/private/SkTemplates.h",
  "//third_party/skia/include/private/SkThreadID.h",
  "//third_party/skia/include/utils/SkRandom.h",
  "//third_party/skia/src/gpu/GrGpuResource.h",
  "//third_party/skia/src/gpu/GrSurface.h",
  "//third_party/skia/src/gpu/GrTexture.h",
  "//third_party/widevine/cdm/widevine_cdm_common.h",
  "//ui/gfx/geometry/geometry_export.h",
  "//ui/gfx/geometry/point.h",
  "//ui/gfx/geometry/rect.h",
  "//ui/gfx/geometry/size.h",
  "//ui/gfx/geometry/vector2d.h",
  "//ui/gfx/geometry/vector2d_f.h",
  "//ui/gfx/gfx_export.h",
  "//ui/gfx/native_widget_types.h",
  "//webos/application_installation_handler.h",
  "//webos/app/webos_content_main_delegate.h",
  "//webos/app/webos_main.h",
  "//webos/common/webos_constants.h",
  "//webos/common/webos_content_client.h",
  "//webos/common/webos_event.h",
  "//webos/common/webos_export.h",
  "//webos/public/runtime.h",
  "//webos/public/runtime_delegates.h",
  "//webos/webapp_window_base.h",
  "//webos/webapp_window_delegate.h",
  "//webos/webos_platform.h",
  "//webos/webview_base.h",
  "//webos/webview_profile.h",
  "//webos/window_group_configuration.h",
]

generated_headers = [
  "$root_gen_dir/base/logging_buildflags.h"
]

generated_headers_deps = [
  "//base:logging_buildflags"
]
