# Copyright 2019 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

source_set("chromium_lttng_provider") {
  sources = [
    "chromium_lttng_provider.c",
    "chromium_lttng_provider.h",
    "lttng_trace_event.h",
  ]

  deps = [ ":lttng_provider" ]
}

source_set("webossystem_lttng_provider") {
  sources = [
    "webos/webossystem_lttng_provider.h",
    "webos/webossystem_lttng_provider.c",
    "webos/pmtracer.h",
  ]

  deps = [ ":lttng_provider" ]
}

loadable_module("lttng_provider") {
  all_dependent_configs = [
    "//build/config/linux/lttng:lttngust",
  ]

  sources = [
    "chromium_lttng_provider.h",
    "chromium_lttng_provider_dl.c",
  ]

  if (is_webos) {
    sources += [
      "webos/webossystem_lttng_provider.h",
      "webos/webossystem_lttng_provider_dl.c",
    ]
  }
}
